worked on set student registration

--- a/CRM/Views/Admission/NewAdmission.cshtml
+++ b/CRM/Views/Admission/NewAdmission.cshtml
@@ -202,7 +202,7 @@
 
                                         <div class="col-md-4">
                                             <div class="form-group">
-                                                <label>FatherMobileNo</label>
+                                                <label>MotherName</label>
                                                 <input asp-for="MotherName" class="form-control">
                                             </div>
                                         </div>
