--- a/CRM/Views/Year/Index.cshtml
+++ b/CRM/Views/Year/Index.cshtml
@@ -43,7 +43,7 @@
                             <thead>
                                 <tr>
                                     <th style="width: 10px">#</th>
-                                    <th>Class Name</th>
+                                    <th>Year Name</th>
                                     <th>Create By</th>
                                     <th>Create Date</th>
                                     <th>Edit</th>
