--- a/CRM/Views/Student/Index.cshtml
+++ b/CRM/Views/Student/Index.cshtml
@@ -122,14 +122,18 @@
                                         <div class="col-md-4">
                                             <div class="form-group">
                                                 <label>Course</label>
-                                                <select id="ddlSubject" asp-for="Course" asp-items="Model.SubjectList" class="form-control"></select>
+                                                <select id="ddlSubject" asp-for="Course" asp-items="Model.SubjectList" class="form-control">
+                                                    <option>Select</option>
+                                                </select>
                                             </div>
                                         </div>
 
                                         <div class="col-md-4">
                                             <div class="form-group">
                                                 <label>Year</label>
-                                                <select id="ddlYear" asp-for="Year" asp-items="Model.YearList" class="form-control"></select>
+                                                <select id="ddlYear" asp-for="Year" asp-items="Model.YearList" class="form-control">
+                                                    <option>Select</option>
+                                                </select>
                                             </div>
                                         </div>
                                     
