--- a/CRM/Views/Admission/NewAdmission.cshtml
+++ b/CRM/Views/Admission/NewAdmission.cshtml
@@ -265,8 +265,13 @@
                                         <div class="col-md-2">
                                             <div class="form-group">
                                                 <label>Passsing Year</label>
-                                                <select id="ddlAcademicYear" asp-for="PassingYear" asp-items="Model.SubjectList" class="form-control">
+                                                <select id="ddlAcademicYear" class="form-control">
                                                     <option>Select</option>
+                                                    <option>2023</option>
+                                                    <option>2024</option>
+                                                    <option>2025</option>
+                                                    <option>2026</option>
+                                                    <option>2027</option>
                                                 </select>
                                             </div>
                                         </div>
