worked on student controller for acadmic detail

--- a/CRM/Views/Student/Index.cshtml
+++ b/CRM/Views/Student/Index.cshtml
@@ -136,7 +136,7 @@
                                                 </select>
                                             </div>
                                         </div>
-                                    
+
 
                                         <div class="col-md-4">
                                             <div class="form-group">
@@ -159,6 +159,72 @@
                                         </div>
 
 
+
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Academic DETAILS -->
+                            <div class="card card-primary">
+                                <div class="card-header">
+                                    <h3 class="card-title"><i class="fas fa-university"></i> Academic Detail</h3>
+                                </div>
+
+                                <div class="card-body">
+                                    <div class="row">
+
+                                        <div class="col-md-2">
+                                            <div class="form-group">
+                                                <label>12th school Name</label>
+                                                <input type="text" asp-for="SchoolName" class="form-control" placeholder="12th school Name">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-2">
+                                            <div class="form-group">
+                                                <label>Passsing Year</label>
+                                                <select id="ddlAcademicYear" class="form-control">
+                                                    <option>Select</option>
+                                                    <option>2023</option>
+                                                    <option>2024</option>
+                                                    <option>2025</option>
+                                                    <option>2026</option>
+                                                    <option>2027</option>
+                                                </select>
+                                            </div>
+                                        </div>
+
+                                        <div class="col-md-2">
+                                            <div class="form-group">
+                                                <label>Board</label>
+                                                <input type="text" asp-for="Board" class="form-control" placeholder="Board">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-2">
+                                            <div class="form-group">
+                                                <label>Max. Marks</label>
+                                                <input type="text" asp-for="MaxMark" class="form-control" placeholder="Max. Marks">
+                                            </div>
+                                        </div>
+                                        <div class="col-md-2">
+                                            <div class="form-group">
+                                                <label>Obtain Marks</label>
+                                                <input type="text" asp-for="ObtMark" class="form-control" placeholder="Obtain Marks">
+                                            </div>
+                                        </div>
+
+                                        <div class="col-md-2">
+                                            <div class="form-group">
+                                                <label>Result</label>
+                                                <input type="text" asp-for="Result" class="form-control" placeholder="Result">
+                                            </div>
+                                        </div>
+
+                                        <div class="col-md-2">
+                                            <div class="form-group">
+                                                <label>Parcentage</label>
+                                                <input type="text" asp-for="Parcent" class="form-control" placeholder="Parcentage">
+                                            </div>
+                                        </div>
 
                                     </div>
                                 </div>
