--- a/CRM/Views/Student/List.cshtml
+++ b/CRM/Views/Student/List.cshtml
@@ -34,12 +34,12 @@
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
-                                <label>Subject</label>
-                                <select id="ddlSubject" asp-items="Model.CourseList" class="form-control"> <option>Select</option></select>
+                                <label>Year</label>
+                                <select id="ddlYear" asp-items="Model.YearList" class="form-control"> <option>Select</option></select>
                             </div>
                         </div>
                         <div class="col-md-3">
-                            <div class="form-group">
+                            <div class="form-group">s
                                 <label>Course</label>
                                 <select id="ddlCourse" asp-items="Model.SubjectList" class="form-control"> <option>Select</option></select>
                             </div>
@@ -125,7 +125,7 @@
         window.onload = function () {
 
             // Example 3: Change events (optional)
-            $("#ddlClass, #ddlSubject, #ddlCourse, #ddlRegPvt").change(function () {
+            $("#ddlClass, #ddlYear, #ddlCourse, #ddlRegPvt").change(function () {
                 $("#tblStudentList tbody").empty();
                 SearchStudent();
             });
@@ -149,7 +149,7 @@
 
            $("#txtSearch").val('');
            $('#ddlClass option:selected').prop("selected", false);
-           $('#ddlSubject option:selected').prop("selected", false);
+            $('#ddlYear option:selected').prop("selected", false);
            $('#ddlCourse option:selected').prop("selected", false);
            $('#ddlRegPvt option:selected').prop("selected", false);
 
@@ -161,18 +161,19 @@
 
             var name = $("#txtSearch").val();
             var varClass = $('#ddlClass option:selected').text();
-            var varSubject = $('#ddlSubject option:selected').text();
+            var varYear = $('#ddlYear option:selected').text();
             var varCourse = $('#ddlCourse option:selected').text();
             var varRegPvt = $('#ddlRegPvt option:selected').text();
 
             $.post(BASE_URL + "/Student/SearchList", {
                 name: name,
                 classes: varClass,
-                subject: varSubject,
+                year: varYear,
                 course: varCourse,
                 regPvt: varRegPvt
             },
                 function (res) {
+                   
                     TableData(res)  //--------pass records for generate tabble
                 }
             );
@@ -182,9 +183,10 @@
         {
             $("#tblStudentList tbody").empty();
             $.each(tableData.data, function (index, element) {
-                $("#tblStudentList").append("<tr><td>" + index + "</td><td>" + element.id + "</td><td>" + element.formNo +
-                    "</td><td>" + element.name + "</td><td>" + element.session + "</td><td>" + element.subject +
-                    "</td><td>" + element.course + "</td><td>" + element.mobileNo +
+                
+                $("#tblStudentList").append("<tr><td>" + index + "</td><td>" + element.id + "</td><td>" + element.admissionFormNo +
+                    "</td><td>" + element.studentName + "</td><td>" + element.year + "</td><td>" + element.class + 
+                    "</td><td>" + element.course + "</td><td>" + element.mobileNoOne +
                     "</td><td> <a class='btn btn-default' href='../Student/index?id=" + element.id + "' ><i class='fas fa-eye'></i></a></td><td><input id='' type='checkbox'></td></tr>");
                 
             });
