worked on student registraion

--- a/CRM/Views/Student/Index.cshtml
+++ b/CRM/Views/Student/Index.cshtml
@@ -79,6 +79,7 @@
                                         <div class="form-group">
                                             <label>Name</label>
                                             <input id="txtSearchStudent" name="txtSearchStudent" class="form-control" placeholder="Student Name">
+                                            
                                         </div>
                                     </div>
 
@@ -305,6 +306,7 @@
                                                     <div class="form-group">
                                                         <label>First Name</label>
                                                         <input asp-for="StudentName" class="form-control">
+                                                        <input type="hidden"  asp-for="Id" />
                                                     </div>
                                                 </div>
 
